--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,16 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Walkthrough Initial</title>
-    <script id="sap-ui-bootstrap"
-            src="https://openui5.hana.ondemand.com/1.65.1/resources/sap-ui-core.js"
-            data-sap-ui-theme="sap_belize"
-            data-sap-ui-libs="sap.m"
-            data-sap-ui-resourceroots='{"Walkthrough": "./"}'
-            data-sap-ui-onInit="module:Walkthrough/index"
-            data-sap-ui-compatVersion="edge"
-            data-sap-ui-async="true">
-    </script>
+    <title>SAPUI5 Walkthrough</title>
 </head>
-<body class="sapUiBody" id="content"></body>
+<body>
+<div>Hello World</div>
+</body>
 </html>
