Step 27: Mock Server Configuration

--- a/webapp/test/mockServer.html
+++ b/webapp/test/mockServer.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAPUI5 Walkthrough</title>
+    <title>SAPUI5 Walkthrough - Test Page</title>
     <script
             id="sap-ui-bootstrap"
             src="https://openui5.hana.ondemand.com/1.65.1/resources/sap-ui-core.js"
             data-sap-ui-theme="sap_belize"
             data-sap-ui-compatVersion="edge"
             data-sap-ui-async="true"
-            data-sap-ui-resourceroots='{"sapui5.walkthrough": "./"}'
-            data-sap-ui-oninit="module:sap/ui/core/ComponentSupport">
-
+            data-sap-ui-resourceroots='{"sapui5.walkthrough": "../"}'
+            data-sap-ui-oninit="module:sapui5/walkthrough/test/initMockServer">
     </script>
 </head>
 <body class="sapUiBody" id="content">
